feat: resend registration token
