# app/structs/registration.go
@@ -5,3 +5,7 @@ type RegistrationToken struct {
 	Password string `json:"password" validate:"required"`
 	Token    string `json:"token" validate:"required"`
 }
+
+type ResendToken struct {
+	Email string `json:"email" validate:"required"`
+}
